RESOLVED FIXED72159
Incorrect inter-caps in “ShouldSkipMetaData” etc.
https://bugs.webkit.org/show_bug.cgi?id=72159
Summary Incorrect inter-caps in “ShouldSkipMetaData” etc.
mitz
Reported 2011-11-11 11:19:38 PST
Metadata is a single word, so the D should not be capitalized in ImageSource::ShouldSkipMetaData, its values, and related variables.
Attachments
Patch (7.52 KB, patch)
2012-04-19 14:43 PDT, Pratik Solanki
mitz: review+
Pratik Solanki
Comment 1 2012-04-19 14:43:00 PDT
Pratik Solanki
Comment 2 2012-04-19 15:33:47 PDT
Note You need to log in before you can comment on or make changes to this bug.