Incorrect inter-caps in “ShouldSkipMetaData” etc. https://bugs.webkit.org/show_bug.cgi?id=72159

Reviewed by Dan Bernstein.

No new tests since no change in functionality.

* platform/graphics/ImageSource.h:
* platform/graphics/cg/ImageSourceCG.cpp:
(WebCore::imageSourceOptions):
(WebCore::ImageSource::isSizeAvailable):
(WebCore::ImageSource::frameSizeAtIndex):
(WebCore::ImageSource::orientationAtIndex):
(WebCore::ImageSource::getHotSpot):
(WebCore::ImageSource::repetitionCount):
(WebCore::ImageSource::createFrameAtIndex):
(WebCore::ImageSource::frameDurationAtIndex):

Canonical link: https://commits.webkit.org/101882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114683 268f45cc-cd09-0410-ab3c-d52691b4dbfc